# ticket-price-predictor

./: .dvcignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-critic.md  data-quality-checker.md  doc-critic.md  leakage-guardian.md  review-orchestrator.md  schema-validator.md  test-critic.md
.claude/rules/: agents.md  conventions.md  data-pipeline.md  design-philosophy.md  ml-pipeline.md  validation.md
.claude/templates/: AGENT.md
.github/workflows/: ci.yml
.omc/: pipeline-state.json  ralplan-state.json
.omc/plans/: data-preprocessing-pipeline.md  fix-vividseats-scraper.md
.omc/sessions/: 20a9257e-86ff-49e8-8fbd-153ccfae4808.json  2edc61b7-a6d2-4ca1-a8d1-ad91458ae847.json  338cf8d4-8950-4375-8798-f9f645abb031.json  3e1f19c9-1655-491e-b2aa-9d48ab85fa28.json  3e295167-6e40-422b-a76a-615efe5b9b25.json  3ece11d4-3f38-440d-b693-b84f84fb571b.json  567a13ef-906a-4998-98a1-2b2dfb996a78.json  5c1ee4ae-808d-49ac-8ebc-3884d31d7f57.json  5ccf84ef-9761-4578-86de-81cc7e783123.json  5cddbcb3-ea92-447a-a0ac-2415f86e8093.json  61359f2d-3b5a-4a5b-9325-2ee4e93f2f4f.json  66c2b11a-e8a3-4c4b-a425-396dcc35e9b3.json  6ba01370-be13-4a6d-b1f8-c102ec4abedd.json  7048c5e5-b541-4101-896e-52fc807d9115.json  7b7b2939-d941-4753-9e9a-900686bcb076.json  7c9f99ee-e98b-4de0-afdf-8bf17f838c6c.json  8c7f9ea4-940f-4e2f-9bd5-9dbc2639f62f.json  ab9c5935-7238-4c4e-8399-13a60a0b414c.json
.omc/state/: subagent-tracking.json
data/: artist_watchlist.json  festival_keywords.json  top_markets.json
data/.cache/: vividseats_diagnostic.json  vividseats_listings_api.json
data/models/: baseline_v1.joblib  baseline_v1_metrics.json  lightgbm_v1.joblib  lightgbm_v10.joblib  lightgbm_v10_metrics.json  lightgbm_v11.joblib  lightgbm_v11_metrics.json  lightgbm_v12.joblib  lightgbm_v12_metrics.json  lightgbm_v1_metrics.json  lightgbm_v2.joblib  lightgbm_v2_metrics.json  lightgbm_v3.joblib  lightgbm_v3_metrics.json  lightgbm_v4.joblib  lightgbm_v4_metrics.json  lightgbm_v5.joblib  lightgbm_v5_metrics.json  lightgbm_v6.joblib  lightgbm_v6_metrics.json  lightgbm_v7.joblib  lightgbm_v7_metrics.json  lightgbm_v8.joblib  lightgbm_v8_metrics.json  lightgbm_v9.joblib  lightgbm_v9_metrics.json  quantile_v3.joblib  quantile_v3_metrics.json
deploy/: AWS_EC2_SETUP.md  EC2_QUICK_REFERENCE.md  ec2-service.sh  ec2-setup.sh  sync-from-ec2.sh
docs/: ARCHITECTURE.md  DEV_GUIDE.md  data-dictionary.md  model-card.md  portfolio.md
docs/issues/: 001-data-leakage-in-training-pipeline.md  002-zone-mapping-misclassification.md  003-artist-name-normalization.md  004-deduplication-hurts-performance.md  005-listing-features-add-noise.md  006-high-value-ticket-prediction-error.md  007-segment-aware-outlier-capping-regression.md  008-dataset-size-bottleneck.md  009-city-name-normalization.md  010-training-improvement-v29.md  011-v30-pipeline-improvements.md  (+1 more)
examples/: preprocessing_pipeline_demo.py
fixtures/: sample_events.json
scripts/: analyze_coverage.py  collect_listings.py  collect_snapshots.py  collect_watchlist_batch.py  detect_stall.py  diagnose_vividseats.py  fetch_sample_events.py  generate_historical_data.py  ingest_events.py  measure_low_count_gate.py  monitor_popular.py  predict.py  preprocess_data.py  run_pipeline.py  show_experiments.py  train_model.py  train_sale_model.py  tune_model.py
tests/: __init__.py  conftest.py  test_analyze_coverage.py  test_asymmetric_loss.py  test_cold_start.py  test_coldstart_features.py  test_ensemble_models.py  test_evaluate_breakdown.py  test_event_pricing.py  test_experiment_log.py  test_geo_mapping.py  test_ingestion.py  test_interaction_features.py  test_label_builder.py  test_listing_features.py  test_listing_structural.py  test_low_count_upweight.py  test_ml_features.py  test_ml_models.py  test_ml_trainer.py  test_neural_model.py  test_normalization.py  test_pipeline_serialization.py  test_popularity.py  test_popularity_features.py  test_predictor_gating.py  test_preprocessing.py  test_ranker.py  test_relative_pricing.py  test_relative_target.py  test_residual_model.py  test_sale_probability.py  test_schemas.py  test_section_encoding.py  test_show_experiments.py  test_snapshot_features.py  test_snapshot_join.py  test_stacking_v2.py  test_stacking_v2_oof_metrics.py  test_storage.py  (+7 more)
(+235 files in other folders)
